Added category photos and mapping
