# cmd/api/docs/swagger.yaml
@@ -112,9 +112,9 @@ definitions:
     type: object
   domain.ShopDetails:
     properties:
-      address_line_1:
+      address_line1:
         type: string
-      address_line_2:
+      address_line2:
         type: string
       bank_account_number:
         type: string
@@ -173,7 +173,7 @@ definitions:
       updated_at:
         type: string
     required:
-    - address_line_1
+    - address_line1
     - city
     - country
     - pincode
